--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-python==3.8.8
+python<=3.8.8
 nsepy==0.8
 pandas>=0.19
 numpy>=1.9.2
 datetime
 sklearn
 matplotlib==3.4.3
-tensorflow==2.7.0
+tensorflow>=2.2
 plotly==5.3.1
 streamlit
 
